chore: misc adjustments and cleanup